alignment problem fixed

--- a/assets/css/components/search-results.css
+++ b/assets/css/components/search-results.css
@@ -1,6 +1,6 @@
 /* Search Results - Styled to match old theme functionality */
 
-.search-result {
+.search-result-item {
   margin-top: 2rem;
 }
 
